samples/_failures_safe/1761639099_1c570e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2943cba7.c: In function ‘main’:
./samples/SAFE/__tmp_2943cba7.c:165:5: error: expected declaration or statement at end of input
  165 |     printf("Enter edges as 'u v weight' (0-indexed): ");
      |     ^~~~~~
